Update locations to be stored as PostGis Points in the database
