# docs/swagger.json
@@ -56,6 +56,39 @@
                 }
             }
         },
+        "/api/deliveries/radius/{latlon}": {
+            "get": {
+                "description": "gets a delivery from the system based on the distance to the given point",
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get delivery by distance",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Latitude,Longitude",
+                        "name": "latlon",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "format": "number",
+                        "description": "radius of search in meters (default = 1000)",
+                        "name": "radius",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.Delivery"
+                        }
+                    }
+                }
+            }
+        },
         "/api/deliveries/{id}": {
             "get": {
                 "description": "gets a delivery from the system by its ID",
@@ -232,7 +265,7 @@
         "domain.Parcel": {
             "type": "object",
             "properties": {
-                "deliverId": {
+                "deliveryId": {
                     "type": "string"
                 },
                 "id": {
@@ -243,6 +276,9 @@
                 },
                 "size": {
                     "$ref": "#/definitions/domain.Dimensions"
+                },
+                "weight": {
+                    "type": "integer"
                 }
             }
         },
@@ -270,6 +306,9 @@
             "properties": {
                 "deliveryPoint": {
                     "$ref": "#/definitions/domain.Location"
+                },
+                "ownerId": {
+                    "type": "string"
                 },
                 "parcelId": {
                     "type": "string"
@@ -326,40 +365,19 @@
         "dto.ResponseCreateDelivery": {
             "type": "object",
             "properties": {
-                "customer": {
-                    "$ref": "#/definitions/domain.Customer"
-                },
-                "customerId": {
-                    "type": "string"
-                },
                 "deliveryPoint": {
                     "$ref": "#/definitions/domain.Location"
                 },
-                "deliveryTime": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
+                "owner": {
+                    "$ref": "#/definitions/domain.Customer"
                 },
                 "parcel": {
                     "$ref": "#/definitions/domain.Parcel"
-                },
-                "parcelId": {
-                    "type": "string"
                 },
                 "pickupPoint": {
                     "$ref": "#/definitions/domain.Location"
                 },
                 "pickupTime": {
-                    "type": "string"
-                },
-                "rider": {
-                    "$ref": "#/definitions/domain.Rider"
-                },
-                "riderId": {
-                    "type": "string"
-                },
-                "status": {
                     "type": "integer"
                 }
             }
